fixed z-index being too low

--- a/DuggaSys/diagram.css
+++ b/DuggaSys/diagram.css
@@ -625,7 +625,7 @@
     padding: 5px 0;
     pointer-events: none;
     position: absolute;
-    z-index: 10;
+    z-index: 20;
 }
 
 .diagramZoomIcons:hover .zoomToolTipText {
